# hoggormPlot

./: .gitignore  MANIFEST.in  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: Makefile  SMI.rst  conf.py  conveniencePlots.rst  index.rst  mainPlot.rst  make.bat  plottingFuncs.rst  quickstart.rst
docs/_build/doctrees/: SMI.doctree  conveniencePlots.doctree  environment.pickle  index.doctree  mainPlot.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  SMI.html  conveniencePlots.html  genindex.html  index.html  mainPlot.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: conveniencePlots.rst.txt  index.rst.txt  mainPlot.rst.txt  quickstart.rst.txt
docs/_build/linkcheck/: output.json
hoggormplot/: SMI_plot.py  TEST_pca.py  TEST_pcr.py  TEST_pls1.py  TEST_pls2.py  __init__.py  conv_biPlot.py  conv_coefficientsPlot.py  conv_correlationLoadingsPlot.py  conv_explainedVariancePlot.py  conv_loadingWeightsPlot.py  conv_loadingsPlot.py  conv_predictPlot.py  conv_scoresPlot.py  data.py  main_plot.py  resPlotting.py
hoggormplot/exampledata/: A.txt  B.txt
