[metadata]
name = hoggormplot
version = attr: hoggormplot.__version__
description = Plotting functions for visualisation of data analysis results from the hoggorm package
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	statistic
	education
	science
url = https://github.com/olivertomic/hoggormPlot
download_url = https://pypi.python.org/pypi/hoggormplot
author = Oliver Tomic
author_email = oliver.tomic@nmbu.no
# maintainer = Thomas Graff
# maintainer_email = graff.thomas@gmail.com
classifiers =
	Natural Language :: English
	Development Status :: 4 - Beta
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Intended Audience :: Developers
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
	Topic :: Scientific/Engineering :: Chemistry
	Topic :: Scientific/Engineering :: Mathematics
license = BSD License
platforms = any


[options]
packages = find:
install_requires =
	numpy>=1.9
setup_requires =
	Sphinx
python_requires =
	> 2.6
tests_require =
	pytest


[options.packages.find]
exclude =
	tests
	docs


[sdist]
# formats=zip
# keep-temp=0


[wheel]
universal=1
